# kendalls

./: .travis-ci.yml  .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yml  test.yml
benches/: bench.rs
src/: lib.rs
