[package]
name = "kendalls"
description = "Kendall's tau rank correlation"
version = "0.2.1"
authors = [
	"zolkko <zolkko@gmail.com>",
	"Genaro Camele <genarocamele@gmail.com>",
	"Matías Ignacio Caruso"
]

include = ["src/**/*.rs", "Cargo.toml"]
documentation = "https://docs.rs/kendalls/"
homepage = "https://github.com/zolkko/kendalls"
repository = "https://github.com/zolkko/kendalls"
readme = "README.md"
license = "MIT"
keywords = [ "statistics", "correlation" ]
categories = [ "algorithms", "science" ]

[badges]
travis-ci = { repository = "zolkko/kendalls", branch = "master" }
codecov = { repository = "zolkko/kendalls", branch = "master", service = "github" }

[dependencies]

[dev-dependencies]
approx = "0.4"
