[package]
name = "kendalls"
description = "Kendall's tau rank correlation"
version = "1.0.0"
authors = [
	"zolkko <zolkko@gmail.com>",
	"Genaro Camele <genarocamele@gmail.com>",
	"Matías Ignacio Caruso",
	"Sergio Leandro Calderón <bs.sergiocalderon@gmail.com>"
]

include = ["src/**/*.rs", "Cargo.toml"]
documentation = "https://docs.rs/kendalls/"
homepage = "https://github.com/zolkko/kendalls"
repository = "https://github.com/zolkko/kendalls"
readme = "README.md"
license = "MIT"
keywords = [ "statistics", "correlation" ]
categories = [ "algorithms", "science" ]
edition = "2024"
rust-version = "1.85.0"

[badges]
travis-ci = { repository = "zolkko/kendalls", branch = "master" }
codecov = { repository = "zolkko/kendalls", branch = "master", service = "github" }

[dependencies]

[dev-dependencies]
float-cmp = "0.10"
criterion = "0.6"
rand = "0.9"
rand_distr = "0.5"

[[bench]]
name = "bench"
harness = false